crates/aiken-lang/src/tests/snapshots/import.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\nuse std/list\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Use(
            Use {
                as_name: None,
                location: 0..12,
                module: [
                    "std",
                    "list",
                ],
                package: (),
                unqualified: [],
            },
        ),
    ],
    kind: Validator,
}
