crates/aiken-lang/src/tests/snapshots/int_parsing_hex_bytes.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\nfn foo() {\n  #[ 0x01, 0xa2, 0x03 ]\n}\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: ByteArray {
                    location: 13..34,
                    bytes: [
                        1,
                        162,
                        3,
                    ],
                    preferred_format: ArrayOfBytes(
                        Hexadecimal,
                    ),
                },
                doc: None,
                location: 0..8,
                name: "foo",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 35,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
