crates/aiken-lang/src/tests/snapshots/list_decorator.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\n@list\ntype Datum {\n  wow: Int\n}\n"
---
@list
type Datum {
  wow: Int,
}
