crates/aiken-lang/src/tests/snapshots/long_import_line.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\nuse cardano/transaction.{Input,\n  Output, OutputReference, Transaction, find_input}\n"
---
use cardano/transaction.{
  Input, Output, OutputReference, Transaction, find_input,
}
