crates/aiken-lang/src/tests/snapshots/more_than_one_decorator.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\n@tag(420)\n@list\ntype Datum {\n  wow: Int\n}\n"
---
@tag(420)
@list
type Datum {
  wow: Int,
}
